# llm_reports

./: .gitignore  Dockerfile  manage.py  pyproject.toml
llm_reports/: asgi.py  settings.py  urls.py  wsgi.py
main/: urls.py
main/handlers/: stats.py
main/middleware/: request_timer.py
main/migrations/: 0001_initial.py  0002_dailystats.py
main/models/: __init__.py  base.py  daily.py  weekly.py
main/results/: __init__.py  daily.py  weekly.py
main/utils/: mongo.py  response.py  router.py
